--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -27,7 +27,7 @@
             </div>
             <button type="button" class="btn">Login</button>
             <div class="create">
-                <a href="#">Create an Account</a>
+                <a href="signup.html">Create an Account</a>
             </div>
             
         </div>
